crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__depmedia-middle.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Engineer1",
            "role": "Student",
            "speaker_code": "EN1"
          },
          {
            "name": "Architect1",
            "role": "Student",
            "speaker_code": "AR1"
          },
          {
            "name": "Enginneer2",
            "role": "Student",
            "speaker_code": "EN2"
          },
          {
            "name": "Architect2",
            "role": "Student",
            "speaker_code": "AR2"
          },
          {
            "name": "Preservationist",
            "role": "Student",
            "speaker_code": "PR1"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "EN1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "AR1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "EN2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "AR2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "PR1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "depmedia-middle",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "bullet inside a dependent tier",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 37628,
            "start_ms": 32221
          },
          "content": [
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 429,
                "start": 426
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "I'm",
                  "type": "text"
                }
              ],
              "raw_text": "I'm",
              "span": {
                "end": 433,
                "start": 430
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "getting",
                  "type": "text"
                }
              ],
              "raw_text": "getting",
              "span": {
                "end": 441,
                "start": 434
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "demand",
                  "type": "text"
                }
              ],
              "raw_text": "demand",
              "span": {
                "end": 448,
                "start": 442
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "capacity",
                  "type": "text"
                }
              ],
              "raw_text": "capacity",
              "span": {
                "end": 457,
                "start": 449
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ratios",
                  "type": "text"
                }
              ],
              "raw_text": "ratios",
              "span": {
                "end": 464,
                "start": 458
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "of",
                  "type": "text"
                }
              ],
              "raw_text": "of",
              "span": {
                "end": 467,
                "start": 465
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 471,
                "start": 468
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "point",
                  "type": "text"
                }
              ],
              "raw_text": "point",
              "span": {
                "end": 477,
                "start": 472
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "five",
                  "type": "text"
                }
              ],
              "raw_text": "five",
              "span": {
                "end": 482,
                "start": 478
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "EN2"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 38893,
            "start_ms": 37628
          },
          "content": [
            {
              "content": [
                {
                  "content": "hmmm",
                  "type": "text"
                }
              ],
              "raw_text": "hmmm",
              "span": {
                "end": 509,
                "start": 505
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "AR1"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 42173,
            "start_ms": 38893
          },
          "content": [
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 535,
                "start": 532
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "uh",
                  "type": "text"
                }
              ],
              "raw_text": "uh",
              "span": {
                "end": 540,
                "start": 538
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 546,
                "start": 543
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "point",
                  "type": "text"
                }
              ],
              "raw_text": "point",
              "span": {
                "end": 552,
                "start": 547
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 556,
                "start": 553
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 561,
                "start": 559
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "EN2"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "palm down hand opens, and bobs up and down over the west",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "wall ",
                  "type": "text"
                },
                {
                  "end_ms": 50441,
                  "start_ms": 48908,
                  "type": "bullet"
                }
              ]
            }
          },
          "type": "Cod"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 50005,
            "start_ms": 47685
          },
          "content": [
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 586,
                "start": 584
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "need",
                  "type": "text"
                }
              ],
              "raw_text": "need",
              "span": {
                "end": 591,
                "start": 587
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "span": {
                "end": 594,
                "start": 592
              },
              "type": "word"
            },
            {
              "type": "underline_begin"
            },
            {
              "content": [
                {
                  "content": "do",
                  "type": "text"
                },
                {
                  "content": null,
                  "type": "underlineend"
                }
              ],
              "raw_text": "do\u0002\u0002",
              "span": {
                "end": 602,
                "start": 598
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "something",
                  "type": "text"
                }
              ],
              "raw_text": "something",
              "span": {
                "end": 612,
                "start": 603
              },
              "type": "word"
            },
            {
              "type": "underline_begin"
            },
            {
              "content": [
                {
                  "content": "to",
                  "type": "text"
                },
                {
                  "content": null,
                  "type": "underlineend"
                }
              ],
              "raw_text": "to\u0002\u0002",
              "span": {
                "end": 620,
                "start": 616
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 625,
                "start": 621
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wall",
                  "type": "text"
                }
              ],
              "raw_text": "wall",
              "span": {
                "end": 630,
                "start": 626
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "EN2"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "AR1": {
      "birth_date": null,
      "code": "AR1",
      "id": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "AR1"
      },
      "name": "Architect1",
      "role": "Student"
    },
    "AR2": {
      "birth_date": null,
      "code": "AR2",
      "id": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "AR2"
      },
      "name": "Architect2",
      "role": "Student"
    },
    "EN1": {
      "birth_date": null,
      "code": "EN1",
      "id": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "EN1"
      },
      "name": "Engineer1",
      "role": "Student"
    },
    "EN2": {
      "birth_date": null,
      "code": "EN2",
      "id": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "EN2"
      },
      "name": "Enginneer2",
      "role": "Student"
    },
    "PR1": {
      "birth_date": null,
      "code": "PR1",
      "id": {
        "corpus": "stevens",
        "language": "eng",
        "role": "Student",
        "speaker": "PR1"
      },
      "name": "Preservationist",
      "role": "Student"
    }
  }
}
