crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__durations.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "durations for groups",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 193,
                      "start": 192
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "raw_text": "b",
                    "span": {
                      "end": 195,
                      "start": 194
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "time": "3.",
                  "type": "duration"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 214,
                      "start": 213
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "raw_text": "b",
                    "span": {
                      "end": 216,
                      "start": 215
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "time": "2:3.",
                  "type": "duration"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 237,
                      "start": 236
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "raw_text": "b",
                    "span": {
                      "end": 239,
                      "start": 238
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "time": "2:3.4",
                  "type": "duration"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "span": {
                      "end": 261,
                      "start": 260
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "raw_text": "b",
                    "span": {
                      "end": 263,
                      "start": 262
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "time": "3.4",
                  "type": "duration"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "event_type": "foo",
              "scoped_annotations": [
                {
                  "time": "6.",
                  "type": "duration"
                }
              ],
              "type": "annotated_event"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
